Correções no cronômetro | Melhoria visual na porcentagem do tempo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div id="timer-progress">
                     <svg>
                         <circle></circle>
-                        <circle></circle>
+                        <circle id="timer-percentage" ></circle>
                     </svg>
                     <div id="timer-text">
                         <div id="timer-counter">
